As part of the investigation into bug 691612, a problem was found with the rop3_is_idempotent (and hence lop_is_idempotent) macros. This patch fixes this definition and adds some more comments explaining the rop operations.

Thanks to lpd for confirming this change.

This produces 78 differences in the regression tests, bmpcmp reveals these to
all be neutral or progressions (in some cases, significant progressions).

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11736 a1074d23-0009-0410-80fe-cf8c14f379e6